--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -38,10 +38,8 @@
           rel="stylesheet">
     <style>
         body {
-            background: linear-gradient(-45deg, #158078, #00a86b, #9f8170, #1e213d, #000000);
             background-size: 400% 400%;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
+            background: linear-gradient(-45deg, #1e213d, #158078, #00a86b, #9f8170, #1e213d, #000000) no-repeat fixed;
             animation: gradient 35s ease infinite;
             height: 100vh;
         }
