--- a/haxball_site/templates/core/include/new_comments.html
+++ b/haxball_site/templates/core/include/new_comments.html
@@ -258,7 +258,7 @@
                                             <i style="align-self: flex-end; margin-bottom: 2px; font-size: 11pt;">
                                                 ответил </i>
 
-                                            <div class="m-0 ml-2" style="font-size: 13pt; font-weight: 600;">
+                                            <div class="m-0 d-flex ml-2" style="font-size: 13pt; font-weight: 600;">
                                                 {% for icon in children.parent.author.user_profile.user_icon.all %}
                                                     <div class="mr-1" style="vertical-align: middle">
 
