--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -38,8 +38,8 @@
           rel="stylesheet">
     <style>
         body {
-            background: linear-gradient(-45deg, #00a86b, #158078, #252850, #000000);
-            background-size: 400% 400%;
+            background: linear-gradient(-45deg, #ff9966, #158078, #252850, #000000);
+            background-size: 300% 300%;
             background-repeat: no-repeat;
             background-attachment: fixed;
             animation: gradient 30s ease infinite;
@@ -58,11 +58,6 @@
             }
         }
 
-        .intro,
-        .intro a {
-            color: #fff;
-            font-family:
-        }
 
         /* customizable snowflake styling */
         .snowflake {
@@ -234,36 +229,36 @@
 </head>
 <body>
 <div class="snowflakes" aria-hidden="true">
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❆
-  </div>
-  <div class="snowflake">
-  ❄
-  </div>
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❆
-  </div>
-  <div class="snowflake">
-  ❄
-  </div>
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❆
-  </div>
-  <div class="snowflake">
-  ❄
-  </div>
+    <div class="snowflake">
+        ❅
+    </div>
+    <div class="snowflake">
+        ❅
+    </div>
+    <div class="snowflake">
+        ❆
+    </div>
+    <div class="snowflake">
+        ❄
+    </div>
+    <div class="snowflake">
+        ❅
+    </div>
+    <div class="snowflake">
+        ❆
+    </div>
+    <div class="snowflake">
+        ❄
+    </div>
+    <div class="snowflake">
+        ❅
+    </div>
+    <div class="snowflake">
+        ❆
+    </div>
+    <div class="snowflake">
+        ❄
+    </div>
 </div>
 {% include "core/include/navbar.html" %}
 {% block content %}
