--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -38,11 +38,11 @@
           rel="stylesheet">
     <style>
         body {
-            background: linear-gradient(-45deg, #ff9966, #158078, #252850, #000000);
-            background-size: 300% 300%;
+            background: linear-gradient(-45deg, #000000, #ff9966, #158078, #252850, #000000);
+            background-size: 400% 400%;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            animation: gradient 30s ease infinite;
+            animation: gradient 33s ease infinite;
             height: 100vh;
         }
 
