--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -135,7 +135,7 @@
         }
 
         .snowflake {
-            font-size: 50px;
+            font-size: 30px;
             position: fixed;
             top: -10%;
             z-index: 9999;
@@ -253,7 +253,7 @@
         ❆
     </div>
     <div class="snowflake">
-        🐔
+        гибон-петух
     </div>
     <div class="snowflake">
         ❅
@@ -284,9 +284,6 @@
     </div>
     <div class="snowflake">
         ❄
-    </div>
-    <div class="snowflake">
-        🙉
     </div>
     <div class="snowflake">
         ❄
