--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -38,9 +38,10 @@
           rel="stylesheet">
     <style>
 
+
         body {
-            background: linear-gradient(-45deg, #00a86b, #158078, #191970, #000000);
-            background-size: 240% 240%;
+            background: linear-gradient(45deg, #00a86b, #158078, #191970, #000000);
+            background-size: 40% 40%;
             background-repeat: no-repeat;
             background-attachment: fixed;
             animation: gradient 36s ease infinite;
@@ -60,8 +61,8 @@
         }
 
         body {
-            background: linear-gradient(-45deg, #00a86b, #158078, #191970, #000000);
-            background-size: 240% 240%;
+            background: linear-gradient(45deg, #00a86b, #158078, #191970, #000000);
+            background-size: 40% 40%;
             background-repeat: no-repeat;
             background-attachment: fixed;
             animation: gradient 36s ease infinite;
@@ -253,7 +254,7 @@
         ❆
     </div>
     <div class="snowflake">
-        гибон-петух
+        <img src="XOsX.gif">
     </div>
     <div class="snowflake">
         ❅
