--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -39,8 +39,8 @@
     <style>
 
         body {
-            background: linear-gradient(45deg, #00a86b, #158078, #191970, #000000);
-            background-size: 40% 40%;
+            background: linear-gradient(135deg, #00a86b, #158078, #191970, #000000);
+            background-size: 50% 50%;
             background-position: 0 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -50,13 +50,13 @@
 
         @keyframes gradient {
             0% {
-                background-position: 0% 50%;
+                background-position: 0% 0%;
             }
             50% {
-                background-position: 100% 50%;
+                background-position: 100% 100%;
             }
             100% {
-                background-position: 0% 50%;
+                background-position: 0% 0%;
             }
         }
 
@@ -233,7 +233,7 @@
         ❆
     </div>
     <div class="snowflake">
-        <img src="{% static "img/ico/XOsX.gif" %}">
+        <img width="30px" src="https://i.imgur.com/PvAYTCP.gif">
     </div>
     <div class="snowflake">
         ❅
