--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -224,7 +224,7 @@
 <body>
 <div class="snowflakes" aria-hidden="true">
     <div class="snowflake">
-        ❅
+        <img width="50" src="https://i.gifer.com/RqUr.gif">
     </div>
     <div class="snowflake">
         ❅
@@ -233,7 +233,7 @@
         ❆
     </div>
     <div class="snowflake">
-        <img width="150px" src="https://i.imgur.com/PvAYTCP.gif">
+        <img width="200px" src="https://i.imgur.com/PvAYTCP.gif">
     </div>
     <div class="snowflake">
         ❅
@@ -242,7 +242,7 @@
         ❆
     </div>
     <div class="snowflake">
-        ❄
+        <img width="50" src="https://i.gifer.com/2unv.gif">
     </div>
     <div class="snowflake">
         ❅
