--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -44,19 +44,19 @@
             background-position: 0 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            animation: gradient 36s ease infinite;
+            animation: gradient 24s ease infinite;
             height: 100vh;
         }
 
         @keyframes gradient {
             0% {
-                background-position: 0% 0%;
+                background-position: 0% 132px;
             }
             50% {
                 background-position: 100% 100%;
             }
             100% {
-                background-position: 0% 0%;
+                background-position: 0% 132px;
             }
         }
 
