--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -195,6 +195,11 @@
             -webkit-animation-delay: 3s, 1.5s;
             animation-delay: 3s, 1.5s
         }
+        .snowflake:nth-of-type(10) {
+            left: 95%;
+            -webkit-animation-delay: 3s, 1.5s;
+            animation-delay: 3s, 1.5s
+        }
 
 
         .demo a {
@@ -224,25 +229,7 @@
 <body>
 <div class="snowflakes" aria-hidden="true">
     <div class="snowflake">
-        <img width="50" src="https://i.gifer.com/RqUr.gif">
-    </div>
-    <div class="snowflake">
         ❅
-    </div>
-    <div class="snowflake">
-        ❆
-    </div>
-    <div class="snowflake">
-        <img width="200px" src="https://i.imgur.com/PvAYTCP.gif">
-    </div>
-    <div class="snowflake">
-        ❅
-    </div>
-    <div class="snowflake">
-        ❆
-    </div>
-    <div class="snowflake">
-        <img width="50" src="https://i.gifer.com/2unv.gif">
     </div>
     <div class="snowflake">
         ❅
@@ -254,42 +241,26 @@
         ❄
     </div>
     <div class="snowflake">
-        ❄
+        ❅
+    </div>
+    <div class="snowflake">
+        ❆
     </div>
     <div class="snowflake">
         ❄
     </div>
     <div class="snowflake">
-        ❄
+        ❅
+    </div>
+    <div class="snowflake">
+        ❆
     </div>
     <div class="snowflake">
         ❄
     </div>
-    <div class="snowflake">
+      <div class="snowflake">
         ❄
     </div>
-    <div class="snowflake">
-        ❄
-    </div>
-    <div class="snowflake">
-        ❄
-    </div>
-    <div class="snowflake">
-        ❄
-    </div>
-    <div class="snowflake">
-        ❄
-    </div>
-    <div class="snowflake">
-        ❄
-    </div>
-    <div class="snowflake">
-        ❄
-    </div>
-    <div class="snowflake">
-        ❄
-    </div>
-
 </div>
 {% include "core/include/navbar.html" %}
 {% block content %}
