--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -39,7 +39,7 @@
     <style>
 
         body {
-            background: linear-gradient(135deg, #00a86b, #158078, #191970, #000000);
+            background: linear-gradient(135deg, #00a86b, #01796f, #10205a, #000000, #ffff00);
             background-size: 100% 100%;
             background-position: 0 0;
             background-repeat: no-repeat;
