--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -39,8 +39,8 @@
     <style>
 
         body {
-            background: linear-gradient(135deg, #00a86b, #01796f, #10205a, #000000, #ffff00);
-            background-size: 125% 125%;
+            background: linear-gradient(135deg, #00a86b, #01796f, #10205a);
+            background-size: 150% 150%;
             background-position: 0 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
