--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -39,12 +39,12 @@
     <style>
 
         body {
-            background: linear-gradient(135deg, #00a86b, #01796f, #10205a);
+            background: linear-gradient(135deg, #a80000, #00ffe7, #000000);
             background-size: 150% 150%;
             background-position: 0 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            animation: gradient 24s linear infinite;
+            animation: gradient 24s ease-in-out infinite;
             height: 100vh;
         }
 
