--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -39,24 +39,24 @@
     <style>
 
         body {
-            background: linear-gradient(135deg, #a80000, #00ffe7, #000000);
-            background-size: 150% 150%;
+            background: linear-gradient(150deg, #000000, #10205a, #01796f, #00a86b, #00fa9a);
+            background-size: 240% 240%;
             background-position: 0 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            animation: gradient 24s ease-in-out infinite;
+            animation: gradient 20s ease-in-out infinite;
             height: 100vh;
         }
 
         @keyframes gradient {
             0% {
-                background-position: 0% 148px;
+                background-position: 0% 0%;
             }
             50% {
                 background-position: 100% 100%;
             }
             100% {
-                background-position: 0% 148px;
+                background-position: 0% 0%;
             }
         }
 
@@ -143,63 +143,117 @@
         }
 
         .snowflake:nth-of-type(1) {
-            left: 10%;
+            left: 5%;
             -webkit-animation-delay: 1s, 1s;
             animation-delay: 1s, 1s
         }
 
         .snowflake:nth-of-type(2) {
-            left: 20%;
+            left: 10%;
             -webkit-animation-delay: 6s, .5s;
             animation-delay: 6s, .5s
         }
 
         .snowflake:nth-of-type(3) {
-            left: 30%;
+            left: 15%;
             -webkit-animation-delay: 4s, 2s;
             animation-delay: 4s, 2s
         }
 
         .snowflake:nth-of-type(4) {
-            left: 40%;
+            left: 20%;
             -webkit-animation-delay: 2s, 2s;
             animation-delay: 2s, 2s
         }
 
         .snowflake:nth-of-type(5) {
-            left: 50%;
+            left: 25%;
             -webkit-animation-delay: 8s, 3s;
             animation-delay: 8s, 3s
         }
 
         .snowflake:nth-of-type(6) {
-            left: 60%;
+            left: 30%;
             -webkit-animation-delay: 6s, 2s;
             animation-delay: 6s, 2s
         }
 
         .snowflake:nth-of-type(7) {
-            left: 70%;
+            left: 35%;
             -webkit-animation-delay: 2.5s, 1s;
             animation-delay: 2.5s, 1s
         }
 
         .snowflake:nth-of-type(8) {
-            left: 80%;
+            left: 40%;
             -webkit-animation-delay: 1s, 0s;
             animation-delay: 1s, 0s
         }
 
         .snowflake:nth-of-type(9) {
-            left: 90%;
+            left: 45%;
             -webkit-animation-delay: 3s, 1.5s;
             animation-delay: 3s, 1.5s
         }
 
         .snowflake:nth-of-type(10) {
-            left: 98%;
+            left: 50%;
             -webkit-animation-delay: 0s, 0s;
             animation-delay: 0s, 0s
+        }
+
+        .snowflake:nth-of-type(11) {
+            left: 55%;
+            -webkit-animation-delay: 1s, 1s;
+            animation-delay: 1s, 1s
+        }
+
+        .snowflake:nth-of-type(12) {
+            left: 60%;
+            -webkit-animation-delay: 6s, .5s;
+            animation-delay: 6s, .5s
+        }
+
+        .snowflake:nth-of-type(13) {
+            left: 65%;
+            -webkit-animation-delay: 4s, 2s;
+            animation-delay: 4s, 2s
+        }
+
+        .snowflake:nth-of-type(14) {
+            left: 70%;
+            -webkit-animation-delay: 2s, 2s;
+            animation-delay: 2s, 2s
+        }
+
+        .snowflake:nth-of-type(15) {
+            left: 75%;
+            -webkit-animation-delay: 8s, 3s;
+            animation-delay: 8s, 3s
+        }
+
+        .snowflake:nth-of-type(16) {
+            left: 80%;
+            -webkit-animation-delay: 6s, 2s;
+            animation-delay: 6s, 2s
+        }
+
+        .snowflake:nth-of-type(17) {
+            left: 85%;
+            -webkit-animation-delay: 2.5s, 1s;
+            animation-delay: 2.5s, 1s
+        }
+
+        .snowflake:nth-of-type(18) {
+            left: 90%;
+            -webkit-animation-delay: 1s, 0s;
+            animation-delay: 1s, 0s
+        }
+
+        .snowflake:nth-of-type(19) {
+            left: 96%;
+            -webkit-animation-delay: 3s, 1.5s;
+            animation-delay: 3s, 1.5s
         }
 
 
@@ -258,6 +312,36 @@
     </div>
     <div class="snowflake">
         ❄
+    </div>
+    <div class="snowflake">
+        ❄
+    </div>
+    <div class="snowflake">
+        ❅
+    </div>
+    <div class="snowflake">
+        ❅
+    </div>
+    <div class="snowflake">
+        ❆
+    </div>
+    <div class="snowflake">
+        ❄
+    </div>
+    <div class="snowflake">
+        ❅
+    </div>
+    <div class="snowflake">
+        ❆
+    </div>
+    <div class="snowflake">
+        ❄
+    </div>
+    <div class="snowflake">
+        ❅
+    </div>
+    <div class="snowflake">
+        ❆
     </div>
     <div class="snowflake">
         ❄
