--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -39,8 +39,8 @@
     <style>
 
         body {
-            background: linear-gradient(150deg, #000000, #10205a, #01796f, #00a86b, #00fa9a);
-            background-size: 240% 240%;
+            background: linear-gradient(150deg, #000000, #10205a, #00ba8e, #20cf6f);
+            background-size: 180% 180%;
             background-position: 0 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
