--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -67,6 +67,7 @@
             font-size: 1em;
             font-family: Arial;
             text-shadow: 0 0 1px #000;
+            z-index: -9999;
         }
 
         @-webkit-keyframes snowflakes-fall {
