--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -39,8 +39,8 @@
     <style>
 
         body {
-            background: linear-gradient(154deg, #0000ff, #10205a, #00ba8e, #20cf6f);
-            background-size: 150% 150%;
+            background: linear-gradient(154deg, #32127a, #10205a, #00ba8e, #20cf6f);
+            background-size: 175% 175%;
             background-position: 0 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
