--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -39,8 +39,8 @@
     <style>
 
         body {
-            background: linear-gradient(154deg, #32127a, #10205a, #00ba8e, #20cf6f);
-            background-size: 175% 175%;
+            background: linear-gradient(150deg, #000000, #10205a, #00a080, #20cf6f, #000000);
+            background-size: 148% 148%;
             background-position: 0 0;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -53,7 +53,7 @@
                 background-position: 0% 0%;
             }
             50% {
-                background-position: 100% 100%;
+                background-position: 133% 133%;
             }
             100% {
                 background-position: 0% 0%;
@@ -61,7 +61,6 @@
         }
 
 
-        /* customizable snowflake styling */
         .snowflake {
             color: #fff;
             font-size: 1em;
