--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -39,8 +39,8 @@
     <style>
 
         body {
-            background: linear-gradient(150deg, #000000, #10205a, #00a080, #20cf6f, #000000);
-            background-size: 148% 148%;
+            background: linear-gradient(150deg, #000000, #10205a, #00a080, #20cf6f, #10205a);
+            background-size: 167% 167%;
             background-repeat: no-repeat;
             background-attachment: fixed;
             animation: gradient 20s ease-in-out infinite;
@@ -49,13 +49,13 @@
 
         @keyframes gradient {
             0% {
-                background-position: 0% 0%;
+                background-position: -10% -10%;
             }
             50% {
                 background-position: 80% 80%;
             }
             100% {
-                background-position: 0% 0%;
+                background-position: -10% -10%;
             }
         }
 
