--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -39,8 +39,8 @@
     <style>
 
         body {
-            background: linear-gradient(135deg, #000000, #10205a, #00a080, #20cf6f, #10205a);
-            background-size: 200% 200%;
+            background: linear-gradient(135deg, #000000, #10205a, #00a080, #20cf6f, #40ffbf);
+            background-size: 240% 240%;
             background-repeat: no-repeat;
             background-attachment: fixed;
             animation: gradient 28s ease-in-out infinite;
@@ -49,13 +49,13 @@
 
         @keyframes gradient {
             0% {
-                background-position: 20% 5%;
+                background-position: 15% 0%;
             }
             50% {
                 background-position: 80% 80%;
             }
             100% {
-                background-position: 20% 5%;
+                background-position: 15% 0%;
             }
         }
 
