--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -39,23 +39,23 @@
     <style>
 
         body {
-            background: linear-gradient(135deg, #000000, #10205a, #00a080, #40ffbf);
-            background-size: 200% 200%;
+            background: linear-gradient(120deg, #000000, #10205a, #00a080, #20cf6f, #40ffbf);
+            background-size: 220% 220%;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            animation: gradient 28s ease-in-out infinite;
+            animation: gradient 30s ease-in-out infinite;
             height: 100vh;
         }
 
         @keyframes gradient {
             0% {
-                background-position: 19% 4%;
+                background-position: 15% 0%;
             }
             50% {
-                background-position: 80% 80%;
+                background-position: 84% 90%;
             }
             100% {
-                background-position: 19% 4%;
+                background-position: 15% 0%;
             }
         }
 
