--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -39,8 +39,8 @@
     <style>
 
         body {
-            background: linear-gradient(120deg, #000000, #10205a, #00a080, #20cf6f, #40ffbf);
-            background-size: 220% 220%;
+            background: linear-gradient(120deg, #000000, #10205a, #00a080, #40ffbf);
+            background-size: 180% 180%;
             background-repeat: no-repeat;
             background-attachment: fixed;
             animation: gradient 30s ease-in-out infinite;
@@ -49,13 +49,13 @@
 
         @keyframes gradient {
             0% {
-                background-position: 12% 0%;
+                background-position: 16% 0%;
             }
             50% {
-                background-position: 75% 83%;
+                background-position: 67% 80%;
             }
             100% {
-                background-position: 12% 0%;
+                background-position: 16% 0%;
             }
         }
 
