--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -63,7 +63,7 @@
         .snowflake {
             color: #fff;
             font-size: 1em;
-            font-family: Arial;
+            font-family: "Open Sans", sans-serif;
             text-shadow: 0 0 1px #000;
         }
 
@@ -113,7 +113,7 @@
         }
 
         .snowflake {
-            font-size: 15px;
+            font-size: 12px;
             position: fixed;
             top: -10%;
             z-index: 9999;
@@ -141,119 +141,184 @@
         }
 
         .snowflake:nth-of-type(1) {
-            left: 5%;
+            left: 4%;
             -webkit-animation-delay: 1s, 1s;
             animation-delay: 1s, 1s
         }
 
         .snowflake:nth-of-type(2) {
-            left: 10%;
+            left: 7%;
             -webkit-animation-delay: 6s, .5s;
             animation-delay: 6s, .5s
         }
 
         .snowflake:nth-of-type(3) {
-            left: 15%;
+            left: 10%;
             -webkit-animation-delay: 4s, 2s;
             animation-delay: 4s, 2s
         }
 
         .snowflake:nth-of-type(4) {
-            left: 20%;
+            left: 14%;
             -webkit-animation-delay: 2s, 2s;
             animation-delay: 2s, 2s
         }
 
         .snowflake:nth-of-type(5) {
-            left: 25%;
+            left: 17%;
             -webkit-animation-delay: 8s, 3s;
             animation-delay: 8s, 3s
         }
 
         .snowflake:nth-of-type(6) {
-            left: 30%;
+            left: 20%;
             -webkit-animation-delay: 6s, 2s;
             animation-delay: 6s, 2s
         }
 
         .snowflake:nth-of-type(7) {
-            left: 35%;
+            left: 24%;
             -webkit-animation-delay: 2.5s, 1s;
             animation-delay: 2.5s, 1s
         }
 
         .snowflake:nth-of-type(8) {
-            left: 40%;
+            left: 27%;
             -webkit-animation-delay: 1s, 0s;
             animation-delay: 1s, 0s
         }
 
         .snowflake:nth-of-type(9) {
-            left: 45%;
+            left: 30%;
             -webkit-animation-delay: 3s, 1.5s;
             animation-delay: 3s, 1.5s
         }
 
         .snowflake:nth-of-type(10) {
-            left: 50%;
+            left: 33%;
             -webkit-animation-delay: 0s, 0s;
             animation-delay: 0s, 0s
         }
 
         .snowflake:nth-of-type(11) {
-            left: 55%;
+            left: 37%;
             -webkit-animation-delay: 1s, 1s;
             animation-delay: 1s, 1s
         }
 
         .snowflake:nth-of-type(12) {
-            left: 60%;
+            left: 40%;
             -webkit-animation-delay: 6s, .5s;
             animation-delay: 6s, .5s
         }
 
         .snowflake:nth-of-type(13) {
-            left: 65%;
+            left: 43%;
             -webkit-animation-delay: 4s, 2s;
             animation-delay: 4s, 2s
         }
 
         .snowflake:nth-of-type(14) {
-            left: 70%;
+            left: 46%;
             -webkit-animation-delay: 2s, 2s;
             animation-delay: 2s, 2s
         }
 
         .snowflake:nth-of-type(15) {
-            left: 75%;
+            left: 49%;
             -webkit-animation-delay: 8s, 3s;
             animation-delay: 8s, 3s
         }
 
         .snowflake:nth-of-type(16) {
-            left: 80%;
+            left: 52%;
             -webkit-animation-delay: 6s, 2s;
             animation-delay: 6s, 2s
         }
 
         .snowflake:nth-of-type(17) {
-            left: 85%;
+            left: 55%;
             -webkit-animation-delay: 2.5s, 1s;
             animation-delay: 2.5s, 1s
         }
 
         .snowflake:nth-of-type(18) {
-            left: 90%;
+            left: 59%;
             -webkit-animation-delay: 1s, 0s;
             animation-delay: 1s, 0s
         }
 
         .snowflake:nth-of-type(19) {
-            left: 96%;
+            left: 62%;
             -webkit-animation-delay: 3s, 1.5s;
             animation-delay: 3s, 1.5s
         }
 
+        .snowflake:nth-of-type(20) {
+            left: 65%;
+            -webkit-animation-delay: 6s, 2s;
+            animation-delay: 6s, 2s
+        }
+
+        .snowflake:nth-of-type(21) {
+            left: 69%;
+            -webkit-animation-delay: 2.5s, 1s;
+            animation-delay: 2.5s, 1s
+        }
+
+        .snowflake:nth-of-type(22) {
+            left: 72%;
+            -webkit-animation-delay: 1s, 0s;
+            animation-delay: 1s, 0s
+        }
+
+        .snowflake:nth-of-type(23) {
+            left: 75%;
+            -webkit-animation-delay: 3s, 1.5s;
+            animation-delay: 3s, 1.5s
+        }
+
+        .snowflake:nth-of-type(24) {
+            left: 79%;
+            -webkit-animation-delay: 0s, 0s;
+            animation-delay: 0s, 0s
+        }
+
+        .snowflake:nth-of-type(25) {
+            left: 82%;
+            -webkit-animation-delay: 1s, 1s;
+            animation-delay: 1s, 1s
+        }
+
+        .snowflake:nth-of-type(26) {
+            left: 85%;
+            -webkit-animation-delay: 6s, .5s;
+            animation-delay: 6s, .5s
+        }
+
+        .snowflake:nth-of-type(27) {
+            left: 88%;
+            -webkit-animation-delay: 4s, 2s;
+            animation-delay: 4s, 2s
+        }
+
+        .snowflake:nth-of-type(28) {
+            left: 91%;
+            -webkit-animation-delay: 2s, 2s;
+            animation-delay: 2s, 2s
+        }
+
+        .snowflake:nth-of-type(29) {
+            left: 94%;
+            -webkit-animation-delay: 8s, 3s;
+            animation-delay: 8s, 3s
+        }
+
+        .snowflake:nth-of-type(30) {
+            left: 98%;
+            -webkit-animation-delay: 8s, 3s;
+            animation-delay: 8s, 3s
+        }
 
         .demo a {
             font-family: 'Raleway', sans-serif;
@@ -343,6 +408,48 @@
     </div>
     <div class="snowflake">
         ❄
+    </div>
+    <div class="snowflake">
+        ❆
+    </div>
+    <div class="snowflake">
+        ❄
+    </div>
+    <div class="snowflake">
+        ❅
+    </div>
+    <div class="snowflake">
+        ❆
+    </div>
+    <div class="snowflake">
+        ❄
+    </div>
+    <div class="snowflake">
+        ❄
+    </div>
+    <div class="snowflake">
+        ❅
+    </div>
+    <div class="snowflake">
+        ❅
+    </div>
+    <div class="snowflake">
+        ❆
+    </div>
+    <div class="snowflake">
+        ❄
+    </div>
+    <div class="snowflake">
+        ❆
+    </div>
+    <div class="snowflake">
+        ❄
+    </div>
+    <div class="snowflake">
+        ❅
+    </div>
+    <div class="snowflake">
+        ❆
     </div>
 </div>
 {% include "core/include/navbar.html" %}
