--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -62,7 +62,8 @@
 
         .snowflake {
             color: #fff;
-            font-size: 1em;
+            font-size: 13px;
+            font-weight: 300;
             font-family: "Open Sans", sans-serif;
             text-shadow: 0 0 1px #000;
         }
@@ -113,8 +114,9 @@
         }
 
         .snowflake {
-            font-size: 12px;
+            font-size: 13px;
             position: fixed;
+            font-weight: 300;
             top: -10%;
             z-index: 9999;
             -webkit-user-select: none;
@@ -318,11 +320,6 @@
             left: 98%;
             -webkit-animation-delay: 8s, 3s;
             animation-delay: 8s, 3s
-        }
-
-        .demo a {
-            font-family: 'Raleway', sans-serif;
-            color: #000;
         }
 
     </style>
