--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -64,7 +64,7 @@
             color: #fff;
             font-size: 13px;
             font-weight: 300;
-            font-family: "Open Sans", sans-serif;
+            font-family: "Montserrat", sans-serif;
             text-shadow: 0 0 1px #000;
         }
 
@@ -281,45 +281,45 @@
         }
 
         .snowflake:nth-of-type(24) {
-            left: 79%;
+            left: 78%;
             -webkit-animation-delay: 0s, 0s;
             animation-delay: 0s, 0s
         }
 
         .snowflake:nth-of-type(25) {
-            left: 82%;
+            left: 81%;
             -webkit-animation-delay: 1s, 1s;
             animation-delay: 1s, 1s
         }
 
         .snowflake:nth-of-type(26) {
-            left: 85%;
+            left: 84%;
             -webkit-animation-delay: 6s, .5s;
             animation-delay: 6s, .5s
         }
 
         .snowflake:nth-of-type(27) {
-            left: 88%;
+            left: 87%;
             -webkit-animation-delay: 4s, 2s;
             animation-delay: 4s, 2s
         }
 
         .snowflake:nth-of-type(28) {
-            left: 91%;
+            left: 90%;
             -webkit-animation-delay: 2s, 2s;
             animation-delay: 2s, 2s
         }
 
         .snowflake:nth-of-type(29) {
-            left: 94%;
+            left: 93%;
             -webkit-animation-delay: 8s, 3s;
             animation-delay: 8s, 3s
         }
 
-        .snowflake:nth-of-type(30) {
-            left: 98%;
-            -webkit-animation-delay: 8s, 3s;
-            animation-delay: 8s, 3s
+        .snowflake:nth-of-type(25) {
+            left: 96%;
+            -webkit-animation-delay: 1s, 1s;
+            animation-delay: 1s, 1s
         }
 
     </style>
