--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -92,7 +92,7 @@
 
 
                 <div class="card mb-1 mr-0 mt-2 text-right">
-                    <iframe src="https://discord.com/widget?id=710289992160772197&theme=dark" width="100%" height="500"
+                    <iframe src="https://discord.com/widget?id=710289992160772197&theme=light" width="250" height="250"
                             allowtransparency="true" frameborder="0"
                             sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
                 </div>
