--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -334,10 +334,12 @@
     <!-- Put this script tag to the <head> of your page -->
     <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
-    <script type="text/javascript">
-        VK.init({apiId: 7568320, onlyWidgets: true});
+    <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+        new Crate({
+            server: '710289992160772197', // cis-haxball.com: Посиделки
+            channel: '1029144535814643732' // #авторизация
+        })
     </script>
-
 
     {% block scripts %} {% endblock %}
 </head>
