--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -337,7 +337,7 @@
     <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
         new Crate({
             server: '710289992160772197', // cis-haxball.com: Посиделки
-            channel: '1029144535814643732' // #авторизация
+            channel: '1029591728035991654' // #гостевая-книга
         })
     </script>
 
