--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -91,14 +91,15 @@
             <div class="col-2 col-xl-2 col-lg-3 col-sm-6 order-3 order-xl-3 order-sm-3 px-1">
 
 
-{#                <div class="card mb-1 mr-0 mt-2 text-right">#}
-{#                    <iframe src="https://discord.com/widget?id=710289992160772197&theme=dark" width="350" height="500"#}
-{#                            allowtransparency="true" frameborder="0"#}
-{#                            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>#}
-{#                    <iframe src="https://discord.com/widget?id=710289992160772197&theme=light" width="250" height="250"#}
-{#                            allowtransparency="true" frameborder="0"#}
-{#                            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>#}
-{#                </div>#}
+                <div class="card mb-1 mr-0 mt-2 text-right">
+                    <widgetbot
+                            server="710289992160772197"
+                            channel="1029591728035991654"
+                            width="800"
+                            height="600"
+                    ></widgetbot>
+                    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+                </div>
 
                 <!--
 
