--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -31,25 +31,25 @@
                         <div class="d-flex">
                             <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
                                 <a href="https://www.youtube.com/channel/UCZGpwhM76ieR15dU8kEzn0w" class="m-0 p-0">
-                                    <img src="/static/img/ico/youtube.png" title="haxball.ts3.ru"
+                                    <img src="/static/img/ico/youtube.PNG" title="haxball.ts3.ru"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
                             <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
                                 <a href="https://discord.gg/8XrnsFGhdy" class="m-0 p-0">
-                                    <img src="{% static "img/ico/discord_1.png" %}" title="haxball.ts3.ru"
+                                    <img src="{% static "img/ico/discord.PNG" %}" title="haxball.ts3.ru"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
                             <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
                                 <a href="https://www.twitch.tv/cis_haxball" class="m-0 p-0">
-                                    <img src="{% static "img/ico/twitch.png" %}" title="haxball.ts3.ru"
+                                    <img src="{% static "img/ico/twitch.PNG" %}" title="haxball.ts3.ru"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
                             <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
                                 <a href="https://www.tiktok.com/@cishaxball?_t=8a7V9mjQfJ8&_r=1" class="m-0 p-0">
-                                    <img src="{% static "img/ico/tik_tok.png" %}" title="haxball.ts3.ru"
+                                    <img src="{% static "img/ico/tiktok.PNG" %}" title="haxball.ts3.ru"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
