--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -20,36 +20,36 @@
         <div class="row" style="max-width: 1600px; position: relative; margin: 0 auto;">
             <div class="col-2 col-xl-2 col-lg-3 col-sm-6 order-xl-1 order-lg-2 order-md-2 order-sm-2 my-2 px-1">
                 <div class="card mt-2 mb-1" style="border-radius: 20px 20px 20px 20px;">
-                    <div class="card-header mb-0 py-1 justify-content-center bg-for-online-head"
+                    <div class="card-header mb-0 py-1 justify-content-center bg-for-online-head text-center"
                          style="border-radius: 20px 20px 0px 0">
-                        <h5 style="margin-left: 10%">Соцсети</h5>
-                        <h6 style="margin-left: 10%; text-decoration: underline">Смотрите нас тут</h6>
+                        <h5>Соцсети</h5>
+                        <h6 style="text-decoration: underline">Смотрите нас тут</h6>
                     </div>
 
                     <div class="card-body p-0 bg-for-online-body"
                          style="position: relative; border-radius: 0px 0px 20px 20px; width: inherit; padding: 5%">
                         <div class="d-flex">
-                            <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
+                            <div class="d-inline-flex mb-2 px-1" style="margin: 3% 1px 0 2px">
                                 <a href="https://www.youtube.com/channel/UCZGpwhM76ieR15dU8kEzn0w" class="m-0 p-0">
-                                    <img src="/static/img/ico/youtube.PNG" title="haxball.ts3.ru"
+                                    <img src="/static/img/ico/youtube.PNG" title="discord"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
                             <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
                                 <a href="https://discord.gg/8XrnsFGhdy" class="m-0 p-0">
-                                    <img src="{% static "img/ico/discord.PNG" %}" title="haxball.ts3.ru"
+                                    <img src="{% static "img/ico/discord.PNG" %}" title="discord"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
                             <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
                                 <a href="https://www.twitch.tv/cis_haxball" class="m-0 p-0">
-                                    <img src="{% static "img/ico/twitch.PNG" %}" title="haxball.ts3.ru"
+                                    <img src="{% static "img/ico/twitch.PNG" %}" title="twitch"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
                             <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
                                 <a href="https://www.tiktok.com/@cishaxball?_t=8a7V9mjQfJ8&_r=1" class="m-0 p-0">
-                                    <img src="{% static "img/ico/tiktok.PNG" %}" title="haxball.ts3.ru"
+                                    <img src="{% static "img/ico/tiktok.PNG" %}" title="tiktok"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
@@ -73,11 +73,11 @@
                 <div class="card mt-2 mb-1" style="border-radius: 20px 20px 20px 20px;">
                     <div class="card-header mb-0 py-1 justify-content-center bg-for-online-head"
                          style="border-radius: 20px 20px 0px 0">
-                        <h5 style="margin-left: 10%">Сервер TeamSpeak 3:</h5>
-                        <h6 style="margin-left: 10%; text-decoration: underline">haxball.ts3.ru</h6>
+                        <h5 style="margin-left: 6%;">Сервер TeamSpeak 3:</h5>
+                        <h6 style="margin-left: 6%; text-decoration: underline">haxball.ts3.ru</h6>
                     </div>
 
-                    <div class="card-body p-0 bg-for-online-body"
+                    <div class="card-body bg-for-online-body"
                          style="position: relative; border-radius: 0px 0px 20px 20px; width: inherit; padding: 5%">
                         <div class="d-flex">
                             <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
